--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Language Translation App</title>
+    <title>Live Language Translator</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
@@ -15,67 +15,98 @@
         </div>
         <div class="translation-container">
             <div class="language-selector">
-                <label for="source-language">Source Language:</label>
                 <select id="source-language">
-                    <option value="af">Afrikaans</option>
-                    <option value="sq">Albanian</option>
-                    <option value="am">Amharic</option>
-                    <option value="ar">Arabic</option>
-                    <option value="az">Azerbaijani</option>
-                    <option value="eu">Basque</option>
-                    <option value="be">Belarusian</option>
-                    <option value="bn">Bengali</option>
-                    <option value="bs">Bosnian</option>
-                    <option value="bg">Bulgarian</option>
-                    <option value="ca">Catalan</option>
-                    <option value="ceb">Cebuano</option>
-                    <option value="ny">Chichewa</option>
+                    <option value="en" selected>English</option>
+                    <option value="es">Spanish</option>
+                    <option value="fr">French</option>
+                    <option value="de">German</option>
+                    <option value="it">Italian</option>
+                    <option value="ja">Japanese</option>
+                    <option value="ko">Korean</option>
+                    <option value="pt">Portuguese</option>
+                    <option value="ru">Russian</option>
                     <option value="zh-CN">Chinese (Simplified)</option>
-                    <option value="zh-TW">Chinese (Traditional)</option>
-                    <option value="co">Corsican</option>
-                    <option value="hr">Croatian</option>
-                    <option value="cs">Czech</option>
-                    <option value="da">Danish</option>
-                    <option value="en">English</option>
+                    <option value="ar">Arabic</option>
                     <option value="hi">Hindi</option>
-                    <option value="ne">Nepali</option>
-                </select>
+                    <option value="nl">Dutch</option>
+                    <option value="sv">Swedish</option>
+                    <option value="fi">Finnish</option>
+                    <option value="da">Danish</option>
+                    <option value="no">Norwegian</option>
+                    <option value="tr">Turkish</option>
+                    <option value="el">Greek</option>
+                    <option value="pl">Polish</option>
+                    <option value="hu">Hungarian</option>
+                    <option value="th">Thai</option>
+                    <option value="cs">Czech</option>
+                    <option value="ro">Romanian</option>
+                    <option value="he">Hebrew</option>
+                    <option value="id">Indonesian</option>
+                    <option value="uk">Ukrainian</option>
+                    <option value="vi">Vietnamese</option>
+                    <option value="bg">Bulgarian</option>
+                    <option value="sl">Slovenian</option>
+                    <option value="lt">Lithuanian</option>
+                    <option value="sk">Slovak</option>
+                    <option value="et">Estonian</option>
+                    <option value="lv">Latvian</option>
+                    <option value="hr">Croatian</option>
+                    <option value="sr">Serbian</option>
+                    <option value="bn">Bengali</option>
+                    <option value="tl">Filipino</option>
+                    <option value="sw">Swahili</option>
+                    <option value="ta">Tamil</option>
+                </select> 
             </div>
+            <img src="./swap.png" id="swap-button">
             <div class="language-selector">
-                <label for="target-language">Target Language:</label>
                 <select id="target-language">
-                    <option value="af">Afrikaans</option>
-                    <option value="sq">Albanian</option>
-                    <option value="am">Amharic</option>
-                    <option value="ar">Arabic</option>
-                    <option value="az">Azerbaijani</option>
-                    <option value="eu">Basque</option>
-                    <option value="be">Belarusian</option>
-                    <option value="bn">Bengali</option>
-                    <option value="bs">Bosnian</option>
-                    <option value="bg">Bulgarian</option>
-                    <option value="ca">Catalan</option>
-                    <option value="ceb">Cebuano</option>
-                    <option value="ny">Chichewa</option>
-                    <option value="zh-CN">Chinese (Simplified)</option>
-                    <option value="zh-TW">Chinese (Traditional)</option>
-                    <option value="co">Corsican</option>
-                    <option value="hr">Croatian</option>
-                    <option value="cs">Czech</option>
-                    <option value="da">Danish</option>
                     <option value="en">English</option>
-                    <option value="hi">Hindi</option>
-                    <option value="ne">Nepali</option>
+                    <option value="es">Spanish</option>
+                    <option value="fr">French</option>
+                    <option value="de">German</option>
+                    <option value="it">Italian</option>
+                    <option value="ja">Japanese</option>
+                    <option value="ko">Korean</option>
+                    <option value="pt">Portuguese</option>
+                    <option value="ru">Russian</option>
+                    <option value="zh-CN">Chinese (Simplified)</option>
+                    <option value="ar">Arabic</option>
+                    <option value="hi" selected>Hindi</option>
+                    <option value="nl">Dutch</option>
+                    <option value="sv">Swedish</option>
+                    <option value="fi">Finnish</option>
+                    <option value="da">Danish</option>
+                    <option value="no">Norwegian</option>
+                    <option value="tr">Turkish</option>
+                    <option value="el">Greek</option>
+                    <option value="pl">Polish</option>
+                    <option value="hu">Hungarian</option>
+                    <option value="th">Thai</option>
+                    <option value="cs">Czech</option>
+                    <option value="ro">Romanian</option>
+                    <option value="he">Hebrew</option>
+                    <option value="id">Indonesian</option>
+                    <option value="uk">Ukrainian</option>
+                    <option value="vi">Vietnamese</option>
+                    <option value="bg">Bulgarian</option>
+                    <option value="sl">Slovenian</option>
+                    <option value="lt">Lithuanian</option>
+                    <option value="sk">Slovak</option>
+                    <option value="et">Estonian</option>
+                    <option value="lv">Latvian</option>
+                    <option value="hr">Croatian</option>
+                    <option value="sr">Serbian</option>
+                    <option value="bn">Bengali</option>
+                    <option value="tl">Filipino</option>
+                    <option value="sw">Swahili</option>
+                    <option value="ta">Tamil</option>
                 </select>
- 
             </div>
-        </div>
-        <div class="translate-button-container">
-            <button id="translate-button">Translate</button>
         </div>
     </main>
     <footer>
-        <p>&copy; 2023 Your Name</p>
+        <p>&copy; 2023 Deelip Kumar Singh</p>
     </footer>
     <script src="script.js"></script>
 </body>
